@@ -1,3 +1,5 @@
+- Refactor: Remove legacy evaluation season and temporary enrolment logic [#qubIT-Fenix-5554]
+
 7.18.0 (27-06-2024)
 - Refactor: Uses ExcelUtil to handle excel files [#qubIT-Omnis-6065]
 
